Actualización backend/frontend

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ AMAZON_ASSOCIATE_TAG=teapre-20
 
 ML_CLIENT_ID=5337751812780259
 ML_CLIENT_SECRET=6xm4pm6XbNeq9SB2DtJxK7aBfR2BlCjz
-ML_REDIRECT_URI=http://localhost:3000/api/ml/callback
+REDIRECT_URI=https://teaprecios-backend-u2ij.vercel.app/api/ml/callback
+
 
