--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/api/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,3 +18,4 @@
     "express": "^5.1.0"
   }
 }
+
