--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "backend/api/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "backend/api/index.js"
-    }
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
